--- a/style.css
+++ b/style.css
@@ -48,7 +48,8 @@ canvas {
     height: 50px;
     border: 3px solid #555;
     margin: 0 3px;
-    background-color: #888;
+    background-color: rgba(0, 0, 0, 0.2);
+    border: 3px solid #555;
     image-rendering: pixelated;
     display: flex;
     justify-content: center;
